update markers style

--- a/public/global.css
+++ b/public/global.css
@@ -66,17 +66,38 @@ button:focus {
   border-color: #666;
 }
 
-.marker {
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
-  background-color: rgb(98, 30, 153);
+.marker-wrapper {
+  position: relative;
 }
 
-.marker--highlighted {
-  width: 20px;
-  height: 20px;
-  background-color: rgb(255, 37, 102);
+.marker {
+  position: absolute;
+  border-radius: 50%;
+  border: 8px solid rgb(98, 30, 153);
+  width: 8px;
+  height: 8px;
+  bottom: 8px;
+  right: -8px;
+}
+
+.marker::after {
+  position: absolute;
+  content: "";
+  width: 0px;
+  height: 0px;
+  bottom: -30px;
+  left: -6px;
+  border: 10px solid transparent;
+  border-top: 17px solid rgb(98, 30, 153);
+}
+
+.marker--highlighted .marker {
+  border-color: rgb(236, 40, 148);
+}
+
+.marker--highlighted .marker::after {
+  border: 10px solid transparent;
+  border-top: 17px solid rgb(236, 40, 148);
 }
 
 .mapboxgl-popup .mapboxgl-popup-content {
